--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          ftp
+      - name: git-ftp push
+        uses: TiloKar/git-ftp/@main
+        with:
+            url: "testurl from caller action"
+            user: ${{ FTP_USERNAME }}
+            password: "testpw from caller action"
