--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,5 +38,5 @@ jobs:
         uses: TiloKar/git-ftp/@main
         with:
             url: "testurl from caller action"
-            user: ${{ FTP_USERNAME }}
+            user: ${{ secrets.FTP_USERNAME }}
             password: "testpw from caller action"
