--- a/.github/workflows/mainWL.yml
+++ b/.github/workflows/mainWL.yml
@@ -4,17 +4,18 @@ on: push
 
 jobs:
   super-lint:
-    name: Lint Code Base
+    name: Lint Code Base^
     runs-on: ubuntu-latest
     steps: 
-    
-  - name: Checkout
-   uses: actions/checkout@v2.4.0
-    
-  - name: Super-Linter
-  uses: github/super-linter@v4.8.3
+     - name: Checkout
+       uses: actions/checkout@v2.4.0
+       with:
+        repository: ${{ github.repository }}
   
-  env:
+     - name: Super-Linter
+        uses: github/super-linter@v4.8.3
+  
+ env:
     DEFAULT_BRANCH: main
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   
