--- a/.github/workflows/ftpPush.yml
+++ b/.github/workflows/ftpPush.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: FTP_INIT
+name: FTP_PUSH
 
 # Controls when the workflow will run
 on:
