--- a/.github/workflows/ftpPush.yml
+++ b/.github/workflows/ftpPush.yml
@@ -33,5 +33,4 @@ jobs:
           git config git-ftp.url "$FTPSERVER"
           git config git-ftp.user "$FTPUSER"
           git config git-ftp.password "$FTPPW"
-          git push
-          git ftp push
+          git ftp push --force
